Assets/style.css
body {
    background-image: url("../Images/stardust_@2X.png"); 
    
}
.container {
    width: 960px;
    
}

h1 {
    font-size: 50px;
    margin-top: 0px;
    height: 98px;
    float: left;
    background-color: teal;
    color: white;
    font-family: serif;
    text-align: bottom;
   
    
}

.nav {
    color: white;
    float: right;
    font-size: 20px;
    font-family: sans-serif;
    margin-left: 150px;
    padding-top: 50px;
    
    
}

.nav li {
    display: inline-block;
    padding-left: 50px;
    
}
 
a {
    color: gray;
}


header {
    position: relative;
    width: 100%;
    background-color: white;
    height: 100px;
    border-bottom-style: groove;
    border-bottom-color: gray;

}


section {
    box-sizing: content-box;
    width: 960px;
    background-color: #ffffff;
    text-align: center;
    margin: auto;
    margin-right: auto;
    margin-left: auto;
    margin-top: 20px; 
    margin-bottom: 150px;
    border-style: solid;
    border-color: #dddddd;
}

h2 {
    text-align: left;
    margin: 50px;
    color: teal;
    font-size: 35px;
    font-family: 'Cinzel', serif;

}
p {
    font-family:  serif ;
    text-align: left;
    margin: 50px;
    line-height: 30px;
}

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 50px;
    background-color: #666666;
    border-top-style: solid;
    border-top-color: teal;
    border-top-width: 7px;
}
#profile-pic {
    float: left;
    width: 150px;
    padding: 10px;
}
.cr {
    bottom: 5px;
    text-align: center;
    font-size: 10px;
    color: white;
}


.sub {
    background-color: teal;
    color: white;
}
.logo {
    height: 200px;
}
.link {
    text-align: center;
    position: relative;
    font-size: 20px;
    color: white;
    background-color: teal;
    width: 80%;
    padding-bottom: 5px;
    
}

.row {
    margin: 10px 16px;
}
.column {
    float: left;
    width: 33.3%;
    text-align: center;
}

